# flek

./: .gitignore  Cargo.toml  README.markdown  build.sh
.github/workflows/: release.yml  rust.yml
src/: lib.rs  main.rs
src/modules/: cli.rs  error.rs  flek.rs  mod.rs  tests.rs  utils.rs  weights.rs
