[package]
name = "flek"
version = "1.3.0"
edition = "2021"
license = "MIT"
authors = ["Angel Dollface <youreccentricity@outlook.com>"]
description= "A Rustacean implementation of my own algorithms to check for password security."
homepage = "https://github.com/angeldollface/flek"
repository = "https://github.com/angeldollface/flek"
documentation = "https://github.com/angeldollface/flek"
readme = "README.markdown"
keywords = [
  "security"
]
categories = [
  "security"
]
exclude = [
  "/.github"
]

[dependencies]
rand = "0.8.5"
cliply = "0.1.0"

[[bin]]
name = "flek"
path = "src/main.rs"

[profile.release]
strip = true
opt-level = "s"
panic = "abort"
lto = true
codegen-units = 1