[package]
name = "flek"
version = "1.6.0"
edition = "2021"
license = "MIT"
authors = ["Angel Dollface <angelbbe@proton.me>"]
description= "A Rustacean implementation of my own algorithms to check for password security."
homepage = "https://github.com/angeldollface/flek"
repository = "https://github.com/angeldollface/flek"
documentation = "https://docs.rs/flek/1.6.0"
readme = "README.markdown"
keywords = [
  "security"
]
categories = [
  "security"
]
exclude = [
  "/.github"
]

[dependencies]
cliply = "0.2.0"
coutils = "1.5.0"

[[bin]]
name = "flek"
path = "src/main.rs"

[profile.release]
lto = true
strip = true
opt-level = "s"
panic = "abort"
codegen-units = 1